<resources>
    <string name="app_name">Just Watch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    activity_group    -->
    <string name="activity_page_header">Insert Group Name Here</string>
    <string name="list_of_users">\t Who is all here \n\n\n 1. Bobby Hankhill \n 2. Smokealotofpot</string>
    <string name="watch_video_button">Watch Video</string>
    <string name="group_chat_button">Group Chat</string>
    <string name="back_to_lobby_button">Lobby</string>
</resources>
