<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".GroupActivity">


    <TextView
        android:id="@+id/activity_page_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_page_header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="30dp"
        />

    <TextView
        android:id="@+id/user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_page_header_text_view"
        app:layout_constraintLeft_toRightOf="@id/activity_page_header_text_view"
        app:layout_constraintRight_toLeftOf="@id/activity_page_header_text_view"
        android:text="@string/list_of_users"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/watch_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_list"
        app:layout_constraintRight_toLeftOf="@id/user_list"
        app:layout_constraintLeft_toRightOf="@id/user_list"
        android:text="@string/watch_video_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#FF9800"
        />
    <Button
        android:id="@+id/group_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/watch_video"
        app:layout_constraintRight_toLeftOf="@id/watch_video"
        app:layout_constraintLeft_toRightOf="@id/watch_video"
        android:text="@string/group_chat_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#FF9800"
        />

    <Button
        android:id="@+id/back_to_lobby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/group_chat"
        app:layout_constraintRight_toLeftOf="@id/group_chat"
        app:layout_constraintLeft_toRightOf="@id/group_chat"
        android:text="@string/back_to_lobby_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#FF9800"
        />
</androidx.constraintlayout.widget.ConstraintLayout>